* Change format to call python task
* Added support to run tasks manually

1.0 2017-07-10
~~~~~~~~~~~~~~

* First official release of legato.