@@ -6,6 +6,12 @@ from config import read_configuration_file
 from run import run_task
 
 
+def list_tasks(args):
+    # Read the configuration
+    config_file, _ = read_configuration_file(args.config_file)
+    print config_file.keys()
+
+
 def run(args):
     # Read the configuration
     config_file, _ = read_configuration_file(args.config_file)
@@ -31,8 +37,11 @@ def main():
 
     parser.add_argument("config_file", help="The configuration file")
     parser.add_argument("--verbose", help="Enable debug level logging")
-    parser.add_argument("--task", help="Trigger manually a legato task",
-                        nargs='?')
+
+    group = parser.add_mutually_exclusive_group()
+    group.add_argument("--task", help="Trigger manually a legato task", nargs='?')
+    group.add_argument("--list", help="List of tasks", action='store_true')
+
     parser.add_argument("--filename", help="Set filename for the action",
                         nargs='?')
 
@@ -40,6 +49,8 @@ def main():
 
     if args.task:
         run(args)
+    elif args.list:
+        list_tasks(args)
     else:
         daemon(args)
 
